# blueprintx

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build-release.sh  config.json  main.cpp  sysctl-tuning.conf  vcpkg.json
benchmark/: README.md  benchmark-results.txt  fastapi-server.py  fastify-server.js  package.json  requirements.txt  run-benchmark.sh
src/api/: ApiResponse.cpp  ApiResponse.h
src/cache/: CacheManager.cpp  CacheManager.h  LruCache.cpp  LruCache.h  RedisCache.cpp  RedisCache.h  ResponseCache.cpp  ResponseCache.h
src/config/: EnvConfig.cpp  EnvConfig.h
src/controllers/: BlueprintController.cpp  BlueprintController.h  HealthController.cpp  HealthController.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/middleware/: CorsMiddleware.cpp  CorsMiddleware.h  JwtMiddleware.cpp  JwtMiddleware.h  RateLimiter.cpp  RateLimiter.h
src/openapi/: OpenApiGenerator.cpp  OpenApiGenerator.h
src/protection/: AuditInjector.cpp  AuditInjector.h  CodeGenerator.cpp  CodeGenerator.h  FieldGuard.cpp  FieldGuard.h
src/query/: QueryBuilder.cpp  QueryBuilder.h
src/schema/: JsonSerializer.cpp  JsonSerializer.h  ModelRegistry.cpp  ModelRegistry.h  MySQLIntrospector.cpp  MySQLIntrospector.h  PostgresIntrospector.cpp  PostgresIntrospector.h  RequestValidator.cpp  RequestValidator.h  SQLiteIntrospector.cpp  SQLiteIntrospector.h  SchemaIntrospector.cpp  SchemaIntrospector.h  TypeMapper.cpp  TypeMapper.h  Types.h
